<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Power harassment Protector </string>
    <string name="title_home">Home</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_setting">Setting</string>
    <string name="terms_string">View Terms of Use </string>
    <string name="powerharras_text1">Harassment</string>
    <string name="powerharras_text2">Amulet</string>
    <string name="thanku_text">Thank you for downloading.</string>
    <string name="terms_text">Please allow \"Microphone\"
<span id="push_notification">and agree to the \"Terms of Use\" before using.  </span></string>
    <string name="plans_agree_text">Thank you for agreeing \nto the Terms of Use </string>
    <string name="plans_Text_title">Please select your plan.</string>
    <string name="plan_detail_title_txt">Are you sure you want to use the following plan? </string>
    <string name="plan_popup_description_txt">Changes in the amount due to plan modification will occur in accordance with the subscription terms of each store. (Note: When downgrading from a paid plan to a free plan, it is necessary for the customer to cancel the subscription for each store.)</string>
    <string name="plan_popup_decide_txt">Decide</string>
    <string name="schedule_txt">Schedule</string>
    <string name="schedule_name_text">Schedule name</string>
    <string name="delete_schedule">Delete schedule</string>
    <string name="end_recording">"End Recording "</string>
    <string name="start_recording">"Start Recording "</string>
    <string name="default_time">00:00</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="how_to_use">How to use</string>
    <string name="edit_intent">Edit</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>
    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="save_button">Save</string>
    <string name="menu_save">Save</string>
    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_cancel">Cancel</string>
    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>
    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
    <string name="bad_extension_error">Sorry, this application is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, this application can\'t edit a file if it doesn\'t have an extension like .wav</string>
    <string name="search_edit_box">Search</string>
    <string name="master_data_title">Master Data [Tap to Play and Cut]</string>
    <string name="cut_and_saved_data">Edited list</string>
    <string name="list">List</string>
    <string name="datetime_recording_hint">DateTime</string>
    <string name="change_plan">Plan change</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="preview_cut_please">[Play/Cut]</string>
    <string name="select_the_start_time">Please select the start time.</string>
    <string name="next_btn_instructions">*Clicking \'Next\' will stop recording and save the current data.</string>
    <string name="cut_instructions">*You can Play/Cut for up to 1 hour at a time.</string>
    <string name="dont_proceed_instructions">If you can\'t move to the next screen after 30 seconds, then please restart the app.</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="date_format">yyyy/mm/dd</string>
    <string name="demo_start_end_time">2022/10/1 00:00 - 2022/10/1 01:00</string>
    <string name="duration">Duration</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="recording_bear">Recording State</string>
    <string name="pause">Pause</string>
    <string name="add_15">+15sec</string>
    <string name="backward15">-15sec</string>
    <string name="please_enter_a_file_name">Please enter a file name.</string>
    <string name="terms_header">Please read the Terms of Use \nand click "I agree to the Terms of Use" </string>
    <string name="from_here_start">From here (start)</string>
    <string name="to_here_end">To here (end)</string>
    <string name="file_name">File name</string>
    <string name="save_plan">Saved the plan</string>
    <string name="plan">Plan</string>
    <string name="close">close</string>
    <string name="delete_question">Do you want to delete ?</string>
    <string name="trimming_stop_recording">Trimming [Recording stop area]</string>
    <string name="audio_record_premission_checking">Audio recording permission is necessary to record audio</string>
    <string name="notification_permission_checking_text">Notification permission is necessary to receive notification</string>
    <string name="phone_state_permission_checking_text">Phone State permission is necessary to check audio recordings interrupted by phone calls</string>
    <string name="settings">Settings</string>
    <string name="try_again">Try Again</string>
    <string name="terms_showing_btn">View Terms of Use </string>
    <string name="terms_confirm_btn">I agree to the Terms &amp; Conditions </string>
    <string name="english">ENGLISH</string>
    <string name="term_popup_title">Please read the Terms of Use and click \"I agree to the Terms of Use\" </string>
    <string name="on">ON</string>
    <string name="details">Details</string>
    <string name="monthly">Monthly</string>
    <string name="free">Free</string>
    <string name="way_back_time_approx">Way back time / approx. </string>
    <string name="min">min. </string>
    <string name="plan_price_extension">(tax included) / month</string>
    <string name="hour_plan">hour plan</string>
    <string name="hours">Hours</string>
    <string name="master_plan_approx">"Master data storage duration... Approx. "</string>
    <string name="yen_per_month">yen/month</string>
    <string name="popup_reminder_switch">Notify me when the app is not running</string>
    <string name="app_id">ca-app-pub-5300644298722695~6819890729</string>
    <string name="unit_id">ca-app-pub-5300644298722695/8898139594</string>
    <string name="no_edited_data_found">No edited data found.</string>
    <string name="no_recorded_data_found">No recorded data found</string>
    <string name="recording">Recording</string>
    <string name="not_possible_because_it_is_being_played">Recording is not possible while it is playing.</string>
    <string name="masterdata">Master Data</string>
    <string name="mo">Mo.</string>
    <string name="tu">Tu.</string>
    <string name="we">We.</string>
    <string name="th">Th.</string>
    <string name="fr">Fr.</string>
    <string name="sa">Sa.</string>
    <string name="su">Su.</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="about_cancellation_of_subscription">About cancellation of subscription</string>
    <string name="starts_from">Starts on</string>
    <string name="days">Days</string>
    <string name="no_data_to_trim">No data to trim in after this time.</string>
    <string name="start_time_is_required">Start time is required</string>
    <string name="end_time_is_required">End time is required</string>
    <string name="no_days_selected">No days selected</string>
    <string name="schedule_name_is_required">Schedule name is required</string>
    <string name="schedule_with_the_same_name_already_exists">Schedule with the same name already exists</string>
    <string name="yen">yen</string>
    <string name="no_file_found_to_save">No file found to save.</string>
    <string name="please_open_the_app_to_start_recording">please open the app to start recording</string>
    <string name="accessibility_service_description">To allow call recording on Android 10+ in the background, enable this service.</string>
    <string name="original_file_not_found">Original file not found</string>
    <string name="directory_not_found">Directory not found.</string>
    <string name="myrecordingdirectory">RecordingDirectory</string>
    <string name="savecutdirectory">SaveCutDirectory</string>
    <string name="outputtempdirectory">OutputTempDirectory</string>
    <string name="harassment_amulet">Harassment Amulet</string>
    <string name="no_space_left_on_device">No space left on device</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="running">Running…</string>
    <string name="notification_permission_needed_for_notification">"Notification Permission needed for notification "</string>
    <string name="file_permission_needed">File permission needed</string>
    <string name="phone_state_permission_needed">Phone State permission needed </string>
    <string name="processing">Processing…</string>
    <string name="mb">" MB Requires or more free space."</string>
    <string name="date_is_required">Date is required</string>
    <string name="minute_is_required">Minute is required</string>
    <string name="hour_is_required">Hour is required</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="wrong_time_input">Incorrect time input</string>
    <string name="cut">Cut</string>
    <string name="disable_power_saving">Please disable power-saving mode for better performance.</string>
    <string name="failed_to_rename_the_file">Failed to rename the file.</string>
    <string name="same_name_or_empty_name_field">Same name or empty name field.</string>
    <string name="unable_to_delete_file">Unable to delete file.</string>
    <string name="sorry_wrong_minute">Sorry, wrong minute</string>
    <string name="sorry_wrong_hour">Sorry, wrong hour</string>
    <string name="background_recording_service">Background recording service</string>
    <string name="turn_on_accessibility">To record in the background, the following settings must be enabled.\n\nDownloaded apps > Background recording service > Use background recording service\n\n\nIf there is a restricted issue showing, then please do the following steps.
\n\n->Go to app info of current app.
\n->Tap 3 dot icon.
\n->Choose "allow restricted settings".
\n-> Check Again.</string>
    <string name="interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="share_icon">Share Icon</string>
    <string name="rename_icon">Rename Icon</string>
    <string name="cancel_icon">Cancel Icon</string>
    <string name="need_proper_end_time">Need proper end time.</string>
</resources>