<!-- common_popup_layout.xml -->
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    app:cardCornerRadius="5dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">

        <LinearLayout
            android:background="@color/Lavender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >
            <LinearLayout
                android:id="@+id/delete_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/black"
                android:gravity="center">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/bin"
                    android:contentDescription="@string/delete_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/share_icon"
                android:gravity="center">

                <ImageView

                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/share"
                    android:contentDescription="@string/share_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/rename_icon"
                android:background="@color/grey"
                android:gravity="center">

                <ImageView

                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/pen"
                    android:contentDescription="@string/rename_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rename"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/cancel_icon"
                android:gravity="center">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/close"
                    android:contentDescription="@string/cancel_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>