<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home"
    android:id="@+id/mobile_navigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ataraxia.pawahara.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_playlist"
        android:name="com.ataraxia.pawahara.ui.playlist.PlaylistFragment"
        android:label="@string/title_playlist"
        tools:layout="@layout/fragment_playlist" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.ataraxia.pawahara.ui.settings.SettingsFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_setting_to_plan_change_fragment"
            app:destination="@id/plan_change_fragment"
            app:enterAnim="@anim/slide_in_from_left"


            />
           </fragment>
    <fragment
        android:id="@+id/playFragment"
        android:name="com.ataraxia.pawahara.ui.play.PlayFragment"
        android:label="fragment_play"
        tools:layout="@layout/fragment_play" />
    <argument
        android:name="dataToPass"
        app:argType="string" />
    <fragment
        android:id="@+id/plan_change_fragment"
        android:name="com.ataraxia.pawahara.ui.settings.plan_change_fragment"
        android:label="fragment_plan_change_fragment"
        tools:layout="@layout/fragment_plan_change_fragment" >
        <action
            android:id="@+id/action_plan_change_fragment_to_navigation_setting"
            app:destination="@id/navigation_setting"

            app:enterAnim="@anim/slide_out_to_right"

            />
    </fragment>

</navigation>