<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.thankyou.ThankyouActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appbgcolor"
       >

        <LinearLayout
            android:id="@+id/thnkupart1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spacer"
            android:foregroundGravity="center"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/plan_app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ja_icon_image" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/powerharras_text1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/powerharras_text2" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/spacer"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_above="@+id/thnkupart2">
        </View>

        <LinearLayout
            android:id="@+id/thnkupart2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/Lavender"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/thanku_text"
                android:textAlignment="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/terms_tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/terms_text"
                android:textAlignment="center"
                android:textIsSelectable="false"
                android:textSize="12dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="40px" />


            <androidx.cardview.widget.CardView
                android:id="@+id/termsBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:elevation="1dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/buttonText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/terms_showing_btn"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </RelativeLayout>


</layout>