<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.plan.PlansActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appbgcolor"
        >

        <LinearLayout
            android:id="@+id/planpart1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/planpart2"
            android:foregroundGravity="center"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/plan_app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/en_icon_image" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/powerharras_text1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/powerharras_text2" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/planpart2"
            android:layout_width="match_parent"
            android:layout_height="500px"
            android:layout_centerInParent="true"
            android:layout_marginTop="10px"
            android:background="@color/Lavender"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plans_agree_text"
                android:textAlignment="center"
                android:textIsSelectable="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plans_Text_title"
                android:textAlignment="center"
                android:textIsSelectable="false"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/planpart2"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbars="vertical" />
        </LinearLayout>

    </RelativeLayout>


</layout>